# tiny_url_server

./: Cargo.toml  Dockerfile  README.md
config/: Settings.toml  Settings.yaml
src/: main.rs  settings.rs
src/api/: api.rs  mod.rs
